--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,13 +1,14 @@
 template(name='comments')
     //- div
     //- i.comments.icon
-    .ui.inline.header
-        +i name='comments' classes='ui middle aligned image'
+    .ui.header
+        i.comments.icon
+        //- +i name='comments' classes='ui middle aligned image'
         |comments
     div
     if currentUser
         .ui.fluid.icon.large.input
-            i.plus.blue.icon
+            i.plus.icon
             input.add_comment(model='text' placeholder='add')
     .ui.comments
         each doc_comments
@@ -366,8 +367,8 @@ template(name='view_button')
 
 template(name='remove_button')
     unless is_frontdesk
-        .ui.icon.basic.button.remove_doc(title='delete')
-            i.remove.red.icon
+        .ui.icon.button.remove_doc(title='delete')
+            i.remove.icon
             //- |Delete
 
 template(name='add_button')
