--- a/client/styles.css
+++ b/client/styles.css
@@ -7,7 +7,7 @@ body {
     /*line-height: 200% !important;*/
     /* background: rgba(0,0,0,.9) !important; */
     /* filter: invert(.9) !important; */
-    background: rgba(200, 200, 200, .2) !important
+    background: rgba(200, 200, 200, .1) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -24,6 +24,51 @@ body {
 ::-webkit-scrollbar-track {
   background: lightgrey;
 }
+
+.red.button {
+    background-color:#DB2828 !important;
+}
+.orange.button {
+    background-color:#FE9A76 !important;
+}
+.yellow.button {
+    background-color:#FFD700 !important;
+}
+.olive.button {
+    background-color:#32CD32 !important;
+}
+.green.button {
+    background-color:#016936 !important;
+}
+.teal.button {
+    background-color: #008080 !important;
+}
+.blue.button {
+    background-color: #0E6EB8 !important;
+}
+.violet.button {
+    background-color:#EE82EE !important;
+}
+.purple.button {
+    background-color:#B413EC !important;
+}
+.pink.button {
+    background-color: #FF1493 !important;
+}
+.brown.button {
+    background-color:#A52A2A !important;
+}
+.grey.button {
+    background-color: #A0A0A0 !important;
+}
+.black.button {
+    background-color:#000000 !important;
+}
+
+
+
+
+
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
@@ -154,10 +199,10 @@ body {
 #topnav {
     border-radius: 0px 0px 0px 0px !important;
 }
-.grid_seg:focus-visible {
-    outline: lightgreen solid 2px !important;
+.hour_selected {
+    /* outline: lightgreen solid 2px !important; */
     filter: drop-shadow(2px 2px 5px rgba(200,200,200,.7)) !important;
-    transform: scale(1.05) !important;
+    /* transform: scale(1.05) !important; */
 }
 
 .menu {
@@ -183,13 +228,14 @@ body {
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .global_container{
-    transition: transform 1s; /* Animation */
+    transition: transform .5s; /* Animation */
     /* padding-top: 5em !important; */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 }
 .zoom:hover {
     box-shadow: inset 0px 0px 10px 10px rgba(250,250,250,0.8);
-    /* filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important; */
+    border-radius: 15px !important;
+    filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important;
     transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index:1000 !important;
 }
@@ -421,7 +467,7 @@ input.member_search{
 }
 
 
-.button:not(.kiosk_facet_button) {
+.button:not(.select_hour) {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
     margin:2px !important;
@@ -429,22 +475,22 @@ input.member_search{
     text-size: bold !important;
     font-size: 110% !important;
 
-    background-color: rgba(250,250,250,1) !important;
-    border-radius: 15px !important;
+    /* background-color: rgba(250,250,250,1) !important; */
+    border-radius: 12px !important;
     border: solid !important;
     border-width: 1px !important;
     border-color: lightgrey !important;
     /* transform: translate(0, 4px); */
 }
 
-.button.active {
+/* .button.active {
     /* background-color: rgba(150, 150, 150, 1) !important; */
     background-color: rgba(17, 2, 100, 0.7) !important;
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
     /* background-color: rgba(50, 50, 50, .9) !important; */
     color: white !important;
     /* transform: translate(0, 4px); */
-}
+} */
 .button.green {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
@@ -490,7 +536,7 @@ input.member_search{
 
 .button:hover {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
-    box-shadow: 0 0px 2px 1px rgba(50, 50, 100, 0.2) !important;
+    /* box-shadow: 0 0px 2px 1px rgba(50, 50, 100, 0.2) !important; */
     /* background-color: rgba(43, 33, 0, .9) !important; */
     /* color: white !important; */
     /* transform: translate(0, 4px); */
@@ -534,7 +580,7 @@ input.member_search{
 
 
 .button, .selector, .card, body, .item{
-    animation: fadein 1s;
+    animation: fadein .5s;
     /* -webkit-transition: opacity 2s ease-out; */
     /* animation: fadeout 1s; */
 }
@@ -885,7 +931,7 @@ h1.ui.header{
 .mediumscroll{
 	overflow-y:scroll;
 	overflow-x:hidden;
-	max-height:500px;
+	max-height:600px;
 	/*max-height:85vh;*/
 	padding-top: 1em;
 	/*padding-left: 1em;*/
