--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -3,25 +3,24 @@ template(name='login')
         .centered.row
             .eight.wide.column
                 h1.ui.center.aligned.header
-                    i.blue.big.plus.icon
                     | gold run login
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.inline.small.header 
-                    +i name='user-male'
+                    //- +i name='user-male'
                     |username
                 .ui.fluid.large.input(class=login_class)
                     input.username(type='text')
                 .ui.inline.small.header 
-                    +i name='password'
+                    //- +i name='password'
                     | password
                 .ui.fluid.large.input(class=login_class)
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
-                        //- i.sign.in.alternate.icon
-                        +i name='internal' classes='ui mini inline image'
+                    .ui.fluid.big.button.enter(title="login #{username}" class=enter_class)
+                        i.sign.in.alternate.icon
+                        //- +i name='internal' classes='ui mini inline image'
                         |login
                         strong #{username}
                         //- i.right.chevron.icon
@@ -29,17 +28,17 @@ template(name='login')
                     if username
                         .ui.center.aligned.basic.segment
                             .ui.header no '#{username}' user
-                            a.ui.basic.button(href='/register')
-                                //- i.user.plus.icon
-                                +i name='enter-2' classes='ui mini inline image'                    
+                            a.ui.button(href='/register')
+                                i.user.plus.icon
+                                //- +i name='enter-2' classes='ui mini inline image'                    
                                 | register
                 .ui.center.aligned.basic.segment    
                     a.ui.button(href='/forgot_password')
-                        +i name='forgot-password' classes='ui mini inline image'                    
-                        //- i.refresh.icon
+                        //- +i name='forgot-password' classes='ui mini inline image'                    
+                        i.refresh.icon
                         |forgot password
                     a.ui.large.button(href='/register') 
-                        +i name='add-user-male' classes='ui mini inline image'                    
-                        //- i.user.plus.icon
+                        //- +i name='add-user-male' classes='ui mini inline image'                    
+                        i.user.plus.icon
                         |register
                     //- .ui.center.aligned.inline.header see the front desk to register an account
