--- a/components/rentals/rental_calendar.jade
+++ b/components/rentals/rental_calendar.jade
@@ -15,69 +15,37 @@ template(name='rental_calendar')
             .eight.wide.column
                 if current_date
                     if current_hour
-                        .ui.header {{short_date current_date_string}} @ #{current_hour} reservations/bids
-                        //- .ui.small.header
-                        //-     +i name='donate'
-                        //-     |bids
-                        //- each hourly_bids
-                        //-     +single_bid
-                        //- unless has_bid
-                        //-     .ui.fluid.button.new_bid
-                        //-         i.green.plus.icon
-                        //-         |bid
-                        if hourly_reservations
-                            .ui.small.header 
-                                +i name='clock'
-                                |reservations
-                            each hourly_reservations
-                                +reservation_small
-                            else 
-                                .ui.green.fluid.button.reserve_this
-                                    |reserve hour for $#{rental.hourly_dollars}
+                        .ui.header {{short_date current_date_string}} @ #{current_hour}:00
+                        .ui.small.header 
+                            +i name='clock'
+                            |reservations
+                        with hourly_reservation
+                            +reservation_small
+                        else 
+                            .ui.green.fluid.button.reserve_this
+                                |reserve hour for $#{rental.hourly_dollars}
 
 
 template(name='upcoming_day')
-    a.ui.small.grey.header(href="/reservation_slot/#{reservation_slot._id}")
+    .ui.small.grey.header
         | #{data.long_form}
-    .ui.segments
+    .ui.vertical.fluid.buttons
         each hours
-            .ui.segment.pointer.select_hour(class=hour_class)
-                .ui.inline.header #{this}
+            .ui.fluid.button.select_hour(class=hour_class)
+                .ui.small.grey.inline.header #{hour_display}
                 if pending_res 
                     i.clock.icon(title="reservation started by #{pending_res.author.name} but not paid for")
-                //- .ui.compact.button.reserve_slot bid
-                //- .ui.list
-                //-     each existing_bids
-                //-         .item 
-                //-             if is_top
-                //-                 i.green.chevron.up.icon(title='highest bid')
-                //-             |$#{bid_amount} by #{_author_username}
                 //- .ui.small.header reservations
                 .ui.list
                     each existing_reservations
                         .item 
                             | by #{_author_username}
-                                
-                div
-                    
+            //- .ui.divider
+                
 
-template(name='single_bid')
-    .ui.segment(class=bid_class)
-        //- .ui.header #{date} @ #{hour}
-        //- +date_edit key='start_date' label='start date' direct=true
-        //- +number_edit key='hour' label='start hour' direct=true
-        if is_author
-            .ui.small.header your bid
-            +number_edit key='bid_amount' label='amount' icon='money' direct=true
-            .ui.button.cancel_bid
-                i.red.ban.icon
-                |cancel
-        else
-            +number_view key='bid_amount' label='bid' icon='money' direct=true
-            |by #{_author_username}
             
 template(name='reservation_small')
-    .ui.segment
+    .ui.secondary.green.segment
         .ui.header from #{start_time} to #{end_time}
         if submitted
             .ui.header submitted on #{submitted_timestamp}
@@ -97,11 +65,11 @@ template(name='reservation_small')
                 //- .ui.input
                 //-     input.res_end(type='datetime-local' value="#{end_datetime}")
                 //- +number_edit key='start_minute' min='0' max='60' label='start minute' direct=true
-                //- +number_edit key='end_hour' min=start_hour max='24' label='end hour' direct=true
+                +number_view key='end_hour' min=start_hour max='24' label='end hour' direct=true
                 //- +number_edit key='end_minute' min='0' max='60' label='end minute' direct=true
                 //- +boolean_edit key='submitted' direct=true
                 .ui.header 
-                    +i name='money' classes='ui tiny inline image'
+                    i.money.icon
                     | #{hour_duration}
                     small hrs * $
                     |#{rental.hourly_dollars}
@@ -123,14 +91,19 @@ template(name='reservation_small')
                     .ui.header 
                         small your balance
                         |{{fixed currentUser.credit}} 
-                    .ui.header
-                        small deductions
+                    .ui.inline.header
+                        small
                         //- | -  #{cost} 
                         | -  #{total_cost} 
                         if res_start_dropoff_selected
                             | + #{rental.res_start_dropoff_fee}
                         if res_end_pickup_selected
                             | + #{rental.res_end_pickup_fee}
+                    .ui.header
+                        small balance after purchase
+                        small = 
+                        //- small balance after purchase 
+                        |#{member_balance_after_purchase}
                     .ui.header
                         small balance after reservation
                         small = 
@@ -152,8 +125,12 @@ template(name='reservation_small')
             unless submitted
                 if can_buy
                     .ui.big.green.fluid.button.submit_reservation(class=submit_button_class)
-                        +i name='paid'        
-                        |submit and pay
+                        if is_paying
+                            i.loading.refresh.icon
+                            |paying
+                        else 
+                            i.shopping.cart      
+                            |submit and pay
                 else if need_credit
                     .ui.header #{member_balance_after_reservation} credit needed to purchase
                     .ui.inline.header add 
@@ -179,40 +156,3 @@ template(name='reservation_small')
         |by #{_author_username}
         if is_author
             +remove_button
-        .ui.modal
-            i.close.icon
-            .header confirm payment of #{cost} credit
-            .image.content
-                .image
-                    with rental
-                        img.ui.rounded.small.image(src="{{c.url image width=300 height=300 gravity='face' crop='fill'}}")
-                .description
-                    if is_paying
-                        i.big.loading.refresh.icon
-                    else 
-                        .ui.header 
-                            small your balance
-                            |{{fixed currentUser.credit}} 
-                        .ui.header
-                            small deductions
-                            | -
-                            if res_start_dropoff_selected
-                                small dropoff selected
-                                | + #{rental.res_start_dropoff_fee}
-                            if res_end_pickup_selected
-                                small pickup selected
-                                | + #{rental.res_end_pickup_fee}
-                        .ui.header
-                            |#{cost} 
-                        .ui.header
-                            small balance after purchase
-                            small = 
-                            //- small balance after purchase 
-                            |#{member_balance_after_reservation}
-            .actions
-                .ui.red.negative.button
-                    i.ban.icon
-                    | cancel
-                .ui.green.positive.large.button
-                    i.checkmark.icon
-                    |confirm
