--- a/components/rentals/rental_edit.jade
+++ b/components/rentals/rental_edit.jade
@@ -18,7 +18,7 @@ template(name='rental_edit')
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +array_edit key='private_location_tags' label='private location tags' icon='marker' direct=true tooltip='for handlers and buyers who are picking up'
                     +array_edit key='public_location_tags' label='public location tags' icon='marker' direct=true tooltip='fo people to find the rental'
-                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    //- +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     +text_edit key='contact_info' label='contact info' icon='info' direct=true
                     +link_edit key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
                     
@@ -32,10 +32,10 @@ template(name='rental_edit')
                     if daily_rate
                         +float_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
                     div
-                    +boolean_edit key='auction' label='auction' icon='podium-with-audience--v2' direct=true
-                    if auction
-                        +number_edit key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
-                        +float_edit key='minimum_bid' label='hour minimum bid ($)' icon='refund' direct=true
+                    //- +boolean_edit key='auction' label='auction' icon='podium-with-audience--v2' direct=true
+                    //- if auction
+                    //-     +number_edit key='auction_cutoff_hours' label='auction cutoff (hours)' direct=true
+                    //-     +float_edit key='minimum_bid' label='hour minimum bid ($)' icon='refund' direct=true
                     div
                     +boolean_edit key='security_deposit_required' label='security deposit required' icon='safe-in' direct=true
                     if security_deposit_required
@@ -47,49 +47,49 @@ template(name='rental_edit')
                         +i name='image'
                         | image
                         +image_edit key='image' label='image' direct=true
-                .column
-                    .ui.dividing.header
-                        +i name='rules'
-                        | policies
-                    +boolean_edit key='approval_required' label='approval required' icon='checkmark' direct=true
-                    if approval_required
-                        div
-                        |you will receive a notification when reservations are requested
-                    .ui.dividing.small.header
-                        +i name='refund'
-                        | refunds
-                    +boolean_edit key='allow_refunds' label='allow refunds' icon='refund' direct=true
-                    if allow_refunds
-                        +number_edit key='full_refund_cutoff_hours' label='full refund cutoff hours' icon='clock' direct=true
-                        +number_edit key='half_refund_cutoff_hours' label='half refund cutoff hours' icon='clock' direct=true
+                //- .column
+                    //- .ui.dividing.header
+                    //-     +i name='rules'
+                    //-     | policies
+                    //- +boolean_edit key='approval_required' label='approval required' icon='checkmark' direct=true
+                    //- if approval_required
+                    //-     div
+                    //-     |you will receive a notification when reservations are requested
+                    //- .ui.dividing.small.header
+                    //-     +i name='refund'
+                    //-     | refunds
+                    //- +boolean_edit key='allow_refunds' label='allow refunds' icon='refund' direct=true
+                    //- if allow_refunds
+                    //-     +number_edit key='full_refund_cutoff_hours' label='full refund cutoff hours' icon='clock' direct=true
+                    //-     +number_edit key='half_refund_cutoff_hours' label='half refund cutoff hours' icon='clock' direct=true
                 .column
                     .ui.dividing.header 
                         +i name='pie chart'
                         |ownership
                     +single_user_edit key='owner_username' label='owner' direct=true
                     +single_user_edit key='handler_username' label='handler' direct=true
-                .column
-                    .ui.dividing.header 
-                        +i name='friends'
-                        |availability
-                    +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
-                    +boolean_edit key='available' label='currently available' direct=true
-                    +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
-                .column
-                    .ui.dividing.header audience
-                    +boolean_edit key='transaction_number_restriction' label='transaction number restriction' icon='hashtag' direct=true
-                    if transaction_number_restriction
-                        +number_edit key='transaction_number_restriction_threshold' label='transaction number restriction threshold'
-                    +boolean_edit key='transaction_amount_restriction' label='transaction amount restriction' icon='money' direct=true
-                    if transaction_amount_restriction
-                        +number_edit key='transaction_amount_restriction_threshold' label='transaction amount restriction threshold'
-                    +boolean_edit key='visible_to_public' label='visible to public' direct=true
-                    unless visible_to_public
-                        +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
-                    unless visible_to_public
-                        +boolean_edit key='visible_to_specific_people' label='visible to specific people' direct=true
-                        if visible_to_specific_people
-                            +multi_user_edit key='visible_to_member_ids' label='visible to members:' direct=true
+                //- .column
+                //-     .ui.dividing.header 
+                //-         +i name='friends'
+                //-         |availability
+                //-     +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
+                //-     +boolean_edit key='available' label='currently available' direct=true
+                //-     +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
+                //- .column
+                //-     .ui.dividing.header audience
+                //-     +boolean_edit key='transaction_number_restriction' label='transaction number restriction' icon='hashtag' direct=true
+                //-     if transaction_number_restriction
+                //-         +number_edit key='transaction_number_restriction_threshold' label='transaction number restriction threshold'
+                //-     +boolean_edit key='transaction_amount_restriction' label='transaction amount restriction' icon='money' direct=true
+                //-     if transaction_amount_restriction
+                //-         +number_edit key='transaction_amount_restriction_threshold' label='transaction amount restriction threshold'
+                //-     +boolean_edit key='visible_to_public' label='visible to public' direct=true
+                //-     unless visible_to_public
+                //-         +boolean_edit key='visible_to_friends' label='visible to friends' direct=true
+                //-     unless visible_to_public
+                //-         +boolean_edit key='visible_to_specific_people' label='visible to specific people' direct=true
+                //-         if visible_to_specific_people
+                //-             +multi_user_edit key='visible_to_member_ids' label='visible to members:' direct=true
                 .column
                     .ui.dividing.header 
                         +i name='delivery'
@@ -108,9 +108,9 @@ template(name='rental_edit')
                     +boolean_edit key='res_end_pickup' label='pickup' icon='order-delivered' direct=true
                     if res_end_pickup
                         +number_edit key='res_end_pickup_fee' label='reservation end pickup fee' icon='low-price' direct=true
-                .column
-                    .ui.dividing.header 
-                        +i name='delivery'
-                        |notifications
-                    +boolean_edit key='notify_on_reservation' label='on new reservation' icon='plus' direct=true
-                    +boolean_edit key='notify_on_cancelation' label='on reservation cancelation' icon='cancel-2--v1' direct=true
+                //- .column
+                //-     .ui.dividing.header 
+                //-         +i name='delivery'
+                //-         |notifications
+                //-     +boolean_edit key='notify_on_reservation' label='on new reservation' icon='plus' direct=true
+                //-     +boolean_edit key='notify_on_cancelation' label='on reservation cancelation' icon='cancel-2--v1' direct=true
